--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 ---
 layout: blog
-title: Home
+title: 
 description: >
   The official Hydejack blog. Version updates, example content and how-to guides on how to blog with Jekyll.
   Open `index.html` to edit this text.
 cover: true
 ---
+<div style="text-align: center;">
+<a class="twitter-timeline" href="https://twitter.com/BayuAngora" data-width="600" data-chrome="noheader noborders noscrollbar">Tweets by BayuAngora</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+&nbsp;
+</div>
