--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: 
+title: Bayu Angora
 description: >
   The official Hydejack blog. Version updates, example content and how-to guides on how to blog with Jekyll.
   Open `index.html` to edit this text.
